#2544 Add additional constraints to processor filter
