# stroom-app/src/main/resources/ui/noauth/swagger/stroom.yaml
@@ -8607,6 +8607,12 @@ components:
         id:
           type: integer
           format: int32
+        maxMetaCreateTimeMs:
+          type: integer
+          format: int64
+        minMetaCreateTimeMs:
+          type: integer
+          format: int64
         pipelineName:
           type: string
         pipelineUuid:
